public class CoordinadorDeRuta {
    private List<Ruta> rutasActivas;
    
    public void asignarRuta(Recolector rec, Ruta ruta);
}
