public class Parada {
    private int orden;
    private List<Pedido> pedidos;
}
