public class Ruta {
    private List<Parada> paradas;
}
