@startuml

hide empty methods
skinparam linetype ortho
hide empty fields
skinparam legendBackgroundColor #ffffff

class Habitante {
    + nombre
    + RUT
}
class Hogar {
    + ID_hogar
}
class Dirección {
    + nombre_calle
    + num_calle
    + ciudad
    + region
}
class API_geo
class Pedido {
    + ID_pedido
    + estado {En espera, En progreso, Cancelado, Terminado}
    + fecha_hora
    + coordenadas
}
class Ruta
class Recolector {
    + nombre
    + RUT
}
class CoordinadorDeRuta
class ZonaDeRecolección
' Implementa el orden de los pickups en una ruta
class Parada {
    + orden
}

Habitante "1..*" -- "1..*" Dirección

' Clase asociación, comunica explícitamente la asociación de un Pedido con un par específico de Habitante y Dirección
(Habitante,Dirección) . Hogar

Hogar "1" -- "1..*" Pedido

Dirección ..> API_geo

Pedido "1..*" --o "1" Parada

Parada "1..*" ---o "1" Ruta

Ruta "1" -- "0..1" Recolector

CoordinadorDeRuta "1" -- "0..*" Ruta

Pedido "0..*" --o "1" ZonaDeRecolección

@enduml